分离MVC集成模块